deploy: e4cf7c15523cf29c23cdd907523f5081bbc33ffe

--- a/index.html
+++ b/index.html
@@ -256,13 +256,15 @@ Tokyo, Japan
 <p>A translation company based in tokyo, providing software services for companies internationally.</p>
 <h6 class=text-muted>Responsibilities:</h6>
 <ul class=justify-content-around>
-<li>Design and develop frontend widgets for items like lists, pagination, popups, tutorial guides</li>
-<li>Connect frontend components to backend apis and add error handling</li>
-<li>Develop system using Backbone.js, Angular.js, and React.js</li>
-<li>Helped in transitioning the system incrementally to use React.js</li>
-<li>Design and develop main app&rsquo;s backend systems for email templates, create tests, database schemas and create apis for the frontend</li>
+<li>Design and develop frontend widgets for items like lists, pagination, popups, tutorial guides.</li>
+<li>Connect frontend components to backend apis and add error handling.</li>
+<li>Write maintainable code using best practises like SOLID principles.</li>
+<li>Develop frontend system using a combination of Backbone.js, Angular.js, and React.js.</li>
+<li>Helped in transitioning the frontend system incrementally to use React.js.</li>
+<li>Design and develop main app&rsquo;s backend systems for email templates, create tests, database schemas and create apis for the frontend.</li>
+<li>Overtime, maintained the test and build pipeline using jenkins and docker.</li>
 <li>Led the design and development of the main company website(<a href=http://www.yaraku.com>http://www.yaraku.com</a>) and main app website(<a href=https://www.yarakuzen.com/en>https://www.yarakuzen.com/en</a>)</li>
-<li>Maintained and optimized our websites for S.E.O. using google analytics, google webmaster and google tag manager</li>
+<li>Maintained and optimized our websites for S.E.O. using google analytics, google webmaster and google tag manager.</li>
 </ul>
 </div>
 </div>
@@ -280,7 +282,7 @@ Tokyo, Japan
 <div class="row align-items-center justify-content-end d-flex">
 <div class="col-10 col-lg-8">
 <div class=experience-entry-heading>
-<h5>Web Developer</h5>
+<h5>Fullstack Developer</h5>
 <h6><a href=https://twitter.com/suprtickets title=SuprTickets target=_blank rel=noopener>SuprTickets</a></h6>
 <p class=text-muted>Dec 2015 - March 2016,
 Manchester, UK (Freelance Contract)
@@ -319,7 +321,7 @@ Manchester, UK (Freelance Contract)
 </div>
 <div class="col-10 col-lg-8">
 <div class=experience-entry-heading>
-<h5>Fullstack developer</h5>
+<h5>Fullstack Developer</h5>
 <h6>Open Business Solutions</h6>
 <p class=text-muted>Dec 2014 - Dec 2015,
 Singapore
@@ -396,8 +398,9 @@ London
 <p>A music company in the same category of the likes of spotify, deezer.</p>
 <h6 class=text-muted>Responsibilities:</h6>
 <ul class=justify-content-around>
+<li>I was involved with taking design concepts through rapid prototype phases to see if they were feasible to be implemented for production.</li>
 <li>Worked with the said music company above. While there, I had to create frontend prototypes using jQuery, Ember.js, vanilla Js, SASS CSS and HTML.</li>
-<li>This was so that we could give concept overview to our investors and partners before the final products are to be developed.</li>
+<li>This was so that we could give interactive concept demonstrations to our investors and partners before the final products are to be developed.</li>
 <li>I collaborated with the team in Kiev(Ukraine), as the company was based in London but had other international headquarters in USA, Spain and Ukraine</li>
 <li>I also had to collaborate with graphic designers, UX designers who were from different parts of Europe in-house to create prototypes.</li>
 <li>This was around teh time when responsive design was a big buzzword and I was invited to give a presentation on it to the rest of the company by my manager, which was a valuable experience to me as I had to explain the concept to non-programmers as well.</li>
@@ -433,7 +436,7 @@ Manchester
 <li>Sometimes, before a feature was completed, I had to write some complex SQL to export the report in excel format so the in-house client can carry out their task.</li>
 <li>The application features went through several stages of development, alpha and testing before being released to the end user.</li>
 <li>I gained valuable experience using C# which I self-learned. Using entity framework was really fun and it opened a whole new world of experience when it came to software development and interfacing with the database.</li>
-<li>I also enjoyed using linq technology from microsoft.</li>
+<li>I gained valuable experience while working there, not just technically but also how to work better and more efficiently in a team.</li>
 </ul>
 </div>
 <div class="col-1 col-lg-2 text-center vertical-line d-inline-flex justify-content-center">
@@ -467,12 +470,13 @@ Manchester
 <h6 class=text-muted>Responsibilities:</h6>
 <ul class=justify-content-around>
 <li>While at University, I worked parttime for a travel agency called Travel Indigo, which specializes in group travel internationally and hotel bookings.</li>
-<li>I and another webdeveloper were responsible for building the initial version of the travel website.</li>
+<li>I and another webd eveloper were responsible for building the initial version of the travel website.</li>
 <li>We had to tap into several apis, primarily travelport, which at that stage only supported xml results(now I believe they do json).</li>
 <li>The xml is parsed using php libraries(Zend framework) and stored in a more manageable format in our database.</li>
-<li>We had to setup a system which caches the results which the user searches so we donot hit the api again.</li>
+<li>We had to setup a system which used advanced ajax to make backend calls.</li>
+<li>The backend then caches the results which the user searches so we do not hit the external APIs unnecessarily.</li>
 <li>We also built custom websites for other individuals or companies who wanted to open their own fligh agency business. The custom sites were based on our base site.</li>
-<li>Since it was a small team, I ws responsible for the design, backend and frontend development.</li>
+<li>Since it was a small team, I was responsible for the design, backend and frontend development.</li>
 <li>We used vanilla php coupled with some libraries from Zend framework.</li>
 <li>While there, I was the lead technical team leader, and along with my I.T., manager conducted several interviews to add more developers to the team, and have learned valuable communication skills through that.</li>
 </ul>
@@ -534,13 +538,14 @@ Manchester
 Manchester
 </p>
 </div>
-<p>Manchester University First Uear project</p>
+<p>Manchester University First year project</p>
 <h6 class=text-muted>Responsibilities:</h6>
 <ul class=justify-content-around>
 <li>I led a team of five in our University web project.</li>
 <li>Using codeigniter php framework, we were tasked with building a sports website where sport teams can list their team details and let players apply to join the team.</li>
 <li>We used jQuery along with css and the php framework to carry out the tasks.</li>
 <li>Later, we had to demonstrate the project in fron of the other teams.</li>
+<li>We learned how to work independently as we had to do all the research without any prior knowledge.</li>
 <li>I gained valuable project planning and team communication experiences while working on this project.</li>
 </ul>
 </div>
