deploy: 58b8fc21465ee87a77f8cd2899a3ea09aaf8b65d

--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@ Manchester
 <div class=experience-entry-heading>
 <h5>PHP Web Developer</h5>
 <h6>Manchester Notebook</h6>
-<p class=text-muted>2011 - Present,
+<p class=text-muted>2011 - 2011,
 Manchester
 </p>
 </div>
@@ -534,7 +534,7 @@ Manchester
 <div class=experience-entry-heading>
 <h5>PHP Web Developer</h5>
 <h6>University of Manchester First Year Project</h6>
-<p class=text-muted>2010 - Present,
+<p class=text-muted>2010 - 2011,
 Manchester
 </p>
 </div>
